# salva

./: .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT_PROGRESS.md  Dockerfile  LICENSE  README.md  README.zh.md  SKILL.md  TODO.md  docker-compose.yml  pyproject.toml  run_integration_tests.sh
adapters/: __init__.py  base.py  party.py
apps/: __init__.py
bay/: __init__.py  manifest.py
benchmark/: compounding.py  corpus.py
core/: __init__.py  controller.py  domain_vocab.py  keyword_graph.py  query_strategy.py  types.py
docs/: ARCHIVED_已完成任務.md  DISTRIBUTION_STRATEGY.md  GTM_POSITIONING.md  MILESTONE_REPORT_2026-06-10.md  PENDING_待完成事項.md  README.md  README.zh.md  SYNTHESIS_2026-06-10.md  Salva_Hold_Bay_架構提案.md  Salva_Runtime_使用者體驗與成熟度審計.md  Salva_Runtime_功能總覽與路線圖.md  Salva_Runtime_多Provider檢索與部署設計.md  Salva_Runtime_封裝與分發路線圖.md  Salva_User_Roadmap_框架.md  USABILITY_AUDIT.md  agent-quick-reference.md  architecture.md  domain-vocab-guide.md  event-driven-integration.md  local-dev-setup.md  product-brief.md  product-brief.zh.md  refactor-slice-01.md  sdk.md  value-model.md
enrichment/: __init__.py  entity_enricher.py  omlx.py  plugins.py
experiments/: EXPERIMENT_PLAN.md
hold/: __init__.py  backends.py  projection.py  schema.py  storage.py  walk.py
processing/: __init__.py  dedup.py  extractor.py  pipeline.py  scorer.py  scrubber.py
research/: 00_SYNTHESIS_for_project.md  01_DISCUSSION_AND_DECISIONS.md  README.md
retrieval/: __init__.py  cache.py  health.py  http.py  models.py  policies.py  registry.py  router.py  seed_fetcher.py  seed_probe.py  source_metadata.py
salva_core/: __init__.py  benchmark.py  evaluation.py  exceptions.py  execution.py  exporting.py  legacy.py  live_probe.py  llm.py  mode_resolver.py  navigation.py  planner.py  presets.py  pricing.py  providers.py  quotas.py  relation_ontology.py  routes.py  schemas.py  semantic.py  service.py  stability.py  topology.py  transforms.py  vector_backends.py  worker.py
salva_sdk/: __init__.py  client.py
scripts/: check_python_version.py  collect_salva_observation.py  compare_agent_mode.py  install_obscura.sh  migrate_evidence_chain.py  refresh_pricing_catalog.py  run_benchmark.py  run_isolation_experiment.py  run_worker.py
tests/: conftest.py  test_bay_hold_api.py  test_benchmark.py  test_benchmark_vs_baseline.py  test_compare_agent_mode.py  test_ddgs_retriever.py  test_discover_endpoint.py  test_discover_experience_meta.py  test_domain_vocab.py  test_e11_query_construction.py  test_e12_snippet_degradation.py  test_e13_schema_purity.py  test_e14_multiround_recovery.py  test_e16_cjk_entity_resolution.py  test_e5b_entity_normalize.py  test_enrichment_plugins.py  test_evaluation.py  test_evidence_api.py  test_execution_context.py  test_feedback_meta.py  test_gleif_resolver.py  test_health_placeholder.py  test_hold_l1a_schema.py  test_hold_walk.py  test_integration_real_calls.py  test_jobs.py  test_legacy_mapping.py  test_live_probe_topology.py  test_llm_provider.py  test_marginalia_retriever.py  test_mcp_auth.py  test_mcp_server.py  (+46 more)
(+230 files in other folders)
