[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "salva-runtime"
version = "0.1.0"
description = "Standalone discovery intelligence runtime for multi-agent use"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.0.0",
]
cli = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "mcp>=1.0.0",
  "coverage>=7.0.0",
]

[project.scripts]
salva = "apps.cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["core", "salva_core", "salva_sdk", "retrieval", "processing", "enrichment"]

[tool.hatch.build.targets.wheel]
packages = [
  "bay",
  "apps",
  "core",
  "enrichment",
  "hold",
  "processing",
  "retrieval",
  "salva_core",
  "salva_sdk",
]
